<resources>
    <string name="app_name">EyeHealth</string>
    <string name="text1">Поднесите и держите телефон на расстоянии 50 см от ваших глаз.</string>
    <string name="text2">Двигайте глазами по кругу: по часовой стрелке и в обратном направлении.</string>
    <string name="text3">Интенсивно сжимайте и разжимайте глаза в быстром темпе.</string>
    <string name="text4">Смотрите глазами в левый нижний угол, затем по прямой переведите взгляд вверх, аналогигно в противоположном направлении.</string>
    <string name="text5">Часто моргайте глазами.</string>
    <string name="text6">Поднесите и держите указательный палец к переносице, несколько секунд смотрите на палец, затем несколько секунд смотритена экран телефона.</string>
    <string name="text7">Подойдите к окну, внимательно посмотрите на этот текст, затем внимательно посмотрите на близкую, хорошо видимую деталь: ветка дерева, что растёт за окном или ручка на раме. Потом направьте взгляд вдаль, стараясь увидеть максимально удалённый предмет.</string>
</resources>